# crewAI

./: 安装.md
ollamatest/: README.md  pyproject.toml  report.md
ollamatest/src/ollamatest/: crew.py  main.py
ollamatest/src/ollamatest/config/: agents.yaml  tasks.yaml
