[project]
name = "ollamatest"
version = "0.1.0"
description = "ollamatest using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.80.0,<1.0.0"
]

[project.scripts]
ollamatest = "ollamatest.main:run"
run_crew = "ollamatest.main:run"
train = "ollamatest.main:train"
replay = "ollamatest.main:replay"
test = "ollamatest.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
